# gutenberg

./: Dockerfile  LICENSE  README.md  app.py  docker-compose.yaml  docker-compose.yml  requirements.txt  setup.cfg
gutenberg/app/: db.py  frontend.py  main.py  models.py  routes.py  schemas.py
gutenberg/models/: item.py  query.py  recommender.py  text.py  user.py
