[metadata]
name = gutenberg
version = 0.0.1
author = José Medeiros
author_email = joseprsm@gmail.com
description = GPT-3 based tool to generate short copy
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/joseprsm/gutenberg
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6